--- a/ex004.Soma/index.html
+++ b/ex004.Soma/index.html
@@ -35,6 +35,7 @@
           var res = window.document.getElementById('res')
           var s = n1 + n2
           res.innerHTML = (`A soma entre ${n1} e ${n2} é igual a ${s}`)
+          var a = window.document.getElementById('txtn1')
           
       }
 
